--- a/contact.html
+++ b/contact.html
@@ -52,12 +52,13 @@
 					<li>
 					</li>
 					<li>
-						<a href="contact.html">page2 &gt;</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 	</div>
+</div>
 </header>
 
 <body>
@@ -167,7 +168,7 @@
 	</footer>
 <!-- Footer - bloc-8 END -->
 
-</div>
+
 <!-- Principal conteneur END -->
     
 
