--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
 					<li>
 					</li>
 					<li>
-						<a href="contact.html">page2 &gt;</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 	</div>
+</div>
 </header>
 
-<body>
+
+    <body>
 	<!-- Principal conteneur -->
 <div class="page-container">
 
@@ -86,7 +88,10 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<h2>
+					La Chouette Agence est une agence de Web design qui aide les
+					entreprises à devenir attractives et visible sur Internet.
+				</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -126,7 +131,17 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<figure>
+					<blockquote>
+						<q>La Chouette Agence est une excellente agence web ! Les
+							web designers ont réussi à capturer l'essence de notre
+							entreprise et à l'intégrer à notre site. Cela nous a aidé
+							à doubler nos ventes en ligne à Lyon.</q>
+					</blockquote>
+					<figcaption>
+						Maxime Guibard, <cite>PDG de À vos fourchettes</cite>
+					</figcaption>
+				</figure>
 
 			</div>
 		</div>
@@ -143,7 +158,7 @@
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 				</h2>
 				<p class="text-center white">
-					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
 		</div>
@@ -156,7 +171,10 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<h2>
+					Nous travaillons avec beaucoup de clients, voici nos
+					réalisations
+				</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -296,7 +314,7 @@
 	</footer>
 <!-- Footer - bloc-8 END -->
 
-</div>
+
 <!-- Principal conteneur END -->
     
 
